Fix ~  Responsiveness on mobile

--- a/To Do App/main.css
+++ b/To Do App/main.css
@@ -48,7 +48,7 @@ h2{
 }
 
 .newNotes li{
-    padding:30px;
+    padding:5rem;
     margin: 15px;
     font-size: 20px;
     border: 2px solid crimson;
